feat: 更新环境变量配置，替换 CF_API_TOKEN 为 ALIYUN_ACCESS_KEY_ID 和 ALIYUN_ACCESS_KEY_SECRET

--- a/caddy-ali/compose.yaml
+++ b/caddy-ali/compose.yaml
@@ -11,7 +11,8 @@ services:
       - caddy_data:/data
       - caddy_config:/config
     environment:
-      - CF_API_TOKEN=${CF_API_TOKEN}
+      - ALIYUN_ACCESS_KEY_ID=${ALIYUN_ACCESS_KEY_ID}
+      - ALIYUN_ACCESS_KEY_SECRET=${ALIYUN_ACCESS_KEY_SECRET}
 
 volumes:
   caddy_data:
