feat: 更新 Caddyfile 配置，添加 TLS 支持并使用 Cloudflare DNS

--- a/caddy-cf/conf/Caddyfile
+++ b/caddy-cf/conf/Caddyfile
@@ -1,10 +1,16 @@
-acme_dns cloudflare {env.CF_API_TOKEN}
-
 example.com:8443 {
+  tls {
+    dns cloudflare {env.CF_API_TOKEN}
+  }
+
   reverse_proxy host.docker.internal:3000
 }
 
 # example.com:8443 {
+#   tls {
+#     dns cloudflare {env.CF_API_TOKEN}
+#   }
+
 #   encode
 
 #   handle /api/* {
