feat: 添加 CLAUDE.md 文件，提供 Docker Compose 配置模板的使用指南和项目结构说明

--- a/redis/compose.yaml
+++ b/redis/compose.yaml
@@ -4,7 +4,6 @@ services:
     restart: unless-stopped
     ports:
       - 6379:6379
-    command:
-      - redis-server /usr/local/etc/redis/redis.conf
+    command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
