feat(n8n): 基于 n8n-docker-caddy 改造，支持独立部署
去除 Caddy，通过 .env 切换 HTTP/HTTPS 模式，便于本地测试和生产部署。

--- a/n8n/compose.yaml
+++ b/n8n/compose.yaml
@@ -1,11 +1,20 @@
 services:
   n8n:
     container_name: n8n
+    image: docker.n8n.io/n8nio/n8n
+    restart: unless-stopped
     ports:
       - 5678:5678
+    environment:
+      - N8N_HOST=${N8N_HOST}
+      - N8N_PORT=5678
+      - N8N_PROTOCOL=${N8N_PROTOCOL}
+      - NODE_ENV=production
+      - WEBHOOK_URL=${N8N_PROTOCOL}://${N8N_HOST}/
+      - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
     volumes:
       - n8n_data:/home/node/.n8n
-    image: docker.n8n.io/n8nio/n8n
+      - ./local_files:/files
 
 volumes:
   n8n_data:
